tests/testfiles/passing/invalid_identifiers/keyword_as_id_switch.c
/* Keyword as identifier: switch */
int main() {
    int switch;
}